// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onCancel when cancel button clicked 1`] = `
<div>
  <dialog
    class="dialog dialog--backdrop  mko_1h7ugta-dialog  mko_1h7ugta-dialog_backdrop"
    open=""
    style="top: calc(0px + 50vh);"
  >
    <div>
      <input
        class="tab-trap tab-trap--top  mko_1q23t0y-tabTrap"
        type="text"
      />
      <div
        class="dialog__content"
      >
        <form
          autocomplete="off"
          class="dialog-content"
          name="jest"
          novalidate=""
        >
          <div
            class="dialog__content-custom"
          >
            <div>
              jest
            </div>
          </div>
          <div
            class="dialog__actions  mko_1h7ugta-actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__cancel"
              id="jestCancel"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
      <input
        class="tab-trap tab-trap--bottom  mko_1q23t0y-tabTrap"
        type="text"
      />
    </div>
  </dialog>
</div>
`;

exports[`should only render title when passed 1`] = `
<div>
  <dialog
    class="dialog dialog--backdrop  mko_1h7ugta-dialog  mko_1h7ugta-dialog_backdrop"
    open=""
    style="top: calc(0px + 50vh);"
  >
    <div>
      <input
        class="tab-trap tab-trap--top  mko_1q23t0y-tabTrap"
        type="text"
      />
      <div
        class="dialog__content"
      >
        <form
          autocomplete="off"
          class="dialog-content"
          name="jest"
          novalidate=""
        >
          <h4
            class="dialog__title  mko_1h7ugta-title"
          >
            jester!
          </h4>
          <div
            class="dialog__content-custom"
          >
            <div>
              jest
            </div>
          </div>
          <div
            class="dialog__actions  mko_1h7ugta-actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__action"
              id="jestAction"
              type="submit"
            >
              Submit
            </button>
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__cancel"
              id="jestCancel"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
      <input
        class="tab-trap tab-trap--bottom  mko_1q23t0y-tabTrap"
        type="text"
      />
    </div>
  </dialog>
</div>
`;

exports[`should open when passed new prop 1`] = `
<div>
  <dialog
    class="dialog dialog--backdrop  mko_1h7ugta-dialog  mko_1h7ugta-dialog_backdrop"
    open=""
    style="top: calc(0px + 50vh);"
  >
    <div>
      <input
        class="tab-trap tab-trap--top  mko_1q23t0y-tabTrap"
        type="text"
      />
      <div
        class="dialog__content"
      >
        <form
          autocomplete="off"
          class="dialog-content"
          name="jest"
          novalidate=""
        >
          <div
            class="dialog__content-custom"
          >
            <div>
              jest
            </div>
          </div>
          <div
            class="dialog__actions  mko_1h7ugta-actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__cancel"
              id="jestCancel"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
      <input
        class="tab-trap tab-trap--bottom  mko_1q23t0y-tabTrap"
        type="text"
      />
    </div>
  </dialog>
</div>
`;

exports[`should render action button and call onAction when clicked 1`] = `
<div>
  <dialog
    class="dialog dialog--backdrop  mko_1h7ugta-dialog  mko_1h7ugta-dialog_backdrop"
    open=""
    style="top: calc(0px + 50vh);"
  >
    <div>
      <input
        class="tab-trap tab-trap--top  mko_1q23t0y-tabTrap"
        type="text"
      />
      <div
        class="dialog__content"
      >
        <form
          autocomplete="off"
          class="dialog-content"
          name="jest"
          novalidate=""
        >
          <div
            class="dialog__content-custom"
          >
            <div>
              jest
            </div>
          </div>
          <div
            class="dialog__actions  mko_1h7ugta-actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__action"
              id="jestAction"
              type="submit"
            >
              Submit
            </button>
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__cancel"
              id="jestCancel"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
      <input
        class="tab-trap tab-trap--bottom  mko_1q23t0y-tabTrap"
        type="text"
      />
    </div>
  </dialog>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <dialog
    class="dialog dialog--backdrop  mko_1h7ugta-dialog  mko_1h7ugta-dialog_backdrop"
    style="top: calc(0px + 50vh);"
  >
    <div>
      <div
        class="dialog__content"
      >
        <form
          autocomplete="off"
          class="dialog-content"
          name="jest"
          novalidate=""
        >
          <div
            class="dialog__content-custom"
          >
            <div>
              jest
            </div>
          </div>
          <div
            class="dialog__actions  mko_1h7ugta-actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__cancel"
              id="jestCancel"
              type="button"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </dialog>
</div>
`;

exports[`should replace form element with div 1`] = `
<div>
  <dialog
    class="dialog dialog--backdrop  mko_1h7ugta-dialog  mko_1h7ugta-dialog_backdrop"
    open=""
    style="top: calc(0px + 50vh);"
  >
    <div>
      <input
        class="tab-trap tab-trap--top  mko_1q23t0y-tabTrap"
        type="text"
      />
      <div
        class="dialog__content"
      >
        <div
          class="dialog-content"
        >
          <div
            class="dialog__content-custom"
          >
            <div>
              jest
            </div>
          </div>
          <div
            class="dialog__actions  mko_1h7ugta-actions"
          >
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__action"
              id="jestAction"
              type="button"
            >
              Submit
            </button>
            <button
              class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard dialog__cancel"
              id="jestCancel"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
      <input
        class="tab-trap tab-trap--bottom  mko_1q23t0y-tabTrap"
        type="text"
      />
    </div>
  </dialog>
</div>
`;
